# exercise4

./: CMakeLists.txt  common.c  common.h  main.c
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Release/: CMakeCache.txt  Makefile  cmake_install.cmake
test/: CMakeLists.txt
test/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  testomp
